--- a/client/src/Component/CSS/Chart.css
+++ b/client/src/Component/CSS/Chart.css
@@ -10,6 +10,7 @@
 
     height: 752px;
     width: 240px;
+    /* transform: translateX(-240px); */
   }
 
 .rectangle-32 {
@@ -311,5 +312,65 @@
     font-weight: 400;
     src: url("https://fonts.animaapp.com/Arial-Regular") format("truetype");
   }
+  .hamburger{
+  display: none;
+  visibility: hidden;
+  -webkit-apparance:"none";
 
-  
+}
+.toggle{
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  background-color:#fff;
+  z-index: 1;
+  cursor: pointer;
+  border-radius: 2px;
+  top: 20px;
+  left: 200px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+.toggle .common{
+  position: absolute;
+  height: 2px;
+  width: 20px;
+  background-color: #8000ff;
+  border-radius: 50px;
+  transition: 0.3s ease;
+}
+.toggle .top_line{
+  top: 30%;
+  left: 50%;
+  transform :translate(-50%,-50%)
+}
+.toggle .middle_line{
+  top: 50%;
+  left: 50%;
+  transform :translate(-50%,-50%)
+}
+.toggle .bottom_line{
+  top: 70%;
+  left: 50%;
+  transform :translate(-50%,-50%)
+}
+
+.hamburger:checked ~ .toggle .top_line{
+  left: 2px;
+  top: 14px;
+  width: 25px;
+  transform: rotate(45deg);
+}
+.hamburger:checked~.toggle.bottom_line{
+  left: 2px;
+  top: 14px;
+  width: 25px;
+  transform: rotate(-45deg);
+}
+.hamburger :checked ~ .toggle .middle_line{
+opacity: 0;
+  transform: translateX(20px)
+}
+.hamburger :checked ~.group-118 {
+  transform: translateX(0);
+  box-shadow: 0 0 15px rgba(0,0,0,0.5);
+}
